--- a/assets/html/Login.html
+++ b/assets/html/Login.html
@@ -15,15 +15,15 @@
           <img class="book" src="../img/books.png" alt="logo" />
           <div class="menu-container">
             <ul class="menu">
-              <li><a href="./assets/html/Login.html">Login</a></li>
-              <li><a href="./assets/html/Sign Up.html">Sign Up</a></li>
+              <li><a href="../html/Login.html">Login</a></li>
+              <li><a href="../html/Sign Up.html">Sign Up</a></li>
             </ul>
             <ul class="menu2">
-              <li><a href="./assets/html/Home.html">Home</a></li>
-              <li><a href="./assets/html/Shop.html">Shop</a></li>
-              <li><a href="./assets/html/Search.html">Search</a></li>
-              <li><a href="./assets/html/Chat.html">Chat</a></li>
-              <li><a href="./assets/html/About Us.html">About Us</a></li>
+              <li><a href="../html/Home.html">Home</a></li>
+              <li><a href="../html/Shop.html">Shop</a></li>
+              <li><a href="../html/Search.html">Search</a></li>
+              <li><a href="../html/Chat.html">Chat</a></li>
+              <li><a href="../html/About Us.html">About Us</a></li>
             </ul>
           </div>
         </div>
