ID, Password 글자 위치 변경 (html)

--- a/assets/html/Login.html
+++ b/assets/html/Login.html
@@ -33,14 +33,14 @@
       <h2>Login</h2>
       <form>
         <div class="form-group">
-          <div class="ID">
-            <label for="ID">ID</label>
-            <input type="text" id="ID" name="ID" placeholder="아이디" required>
-          </div>
-          <div class="PW">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" placeholder="비밀번호" required>
-          </div>
+          <ul>
+            <li>ID</li>
+            <li><input type="text" id="ID" name="ID" placeholder="아이디" required></li>
+          </ul>
+          <ul>
+            <li>Password</li>
+            <li><input type="password" id="password" name="password" placeholder="비밀번호" required></li>
+          </ul>
           <div class="button-container">
             <button type="submit">Login</button>
           </div>
