--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
               <li><a href="./assets/html/Chat.html">Chat</a></li>
               <li><a href="./assets/html/About Us.html">About Us</a></li>
             </ul>
+            <ul class="dropdown-menu">
+              <li><a href="./assets/html/Login.html">Login</a></li>
+              <li><a href="./assets/html/Sign Up.html">Sign Up</a></li>
+              <li><a href="./assets/html/Home.html">Home</a></li>
+              <li><a href="./assets/html/Shop.html">Shop</a></li>
+              <li><a href="./assets/html/Search.html">Search</a></li>
+              <li><a href="./assets/html/Chat.html">Chat</a></li>
+              <li><a href="./assets/html/About Us.html">About Us</a></li>
+            </ul>
           </div>
         </div>
       </nav>
