Logo 클릭시 홈화면 이동

--- a/assets/html/My Page.html
+++ b/assets/html/My Page.html
@@ -12,13 +12,17 @@
     <header class="navbar">
       <nav>
         <div class="nav-container">
-          <img class="book" src="../img/books.png" alt="logo" />
+          <a href="../html/Authentication View.html">
+            <img class="book" src="../img/books.png" alt="logo" />
+          </a>
           <div class="menu-container">
             <ul class="menu">
               <li><img class="user" src="../img/user.png" alt="user" /></li>
               <ul class="menu1">
                 <li>[별명]님, 환영합니다.</li>
-                <li><a href="../html/My Page.html">My Page</a></li>
+                <li class="menu1-1">
+                  <a href="../html/My Page.html">My Page</a>
+                </li>
                 <li><a href="../html/Home.html">Logout</a></li>
               </ul>
             </ul>
