--- a/assets/html/Login.html
+++ b/assets/html/Login.html
@@ -12,7 +12,9 @@
     <header class="navbar">
       <nav>
         <div class="nav-container">
-          <img class="book" src="../img/books.png" alt="logo" />
+          <a href="../html/Home.html">
+            <img class="book" src="../img/books.png" alt="logo" />
+          </a>
           <div class="menu-container">
             <ul class="menu">
               <li><a href="../html/Login.html">Login</a></li>
