입장하기 버튼 변경

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <header class="navbar">
       <nav>
         <div class="nav-container">
-          <img class="book" src="./assets/img/books.png" alt="logo" />
+          <a href="./assets/html/Home.html">
+            <img class="book" src="./assets/img/books.png" alt="logo" />
+          </a>
           <div class="menu-container">
             <ul class="menu">
               <li><a href="./assets/html/Login.html">Login</a></li>
@@ -41,7 +43,11 @@
     <section class="main-content">
       <div class="welcome-container">
         <img class="welcome" src="./assets/img/welcome.jpg" alt="welcome" />
-        <button class="enter-button">입장하기</button>
+        <a href="./assets/html/Home.html">
+          <button class="enter-button">
+            <img src="./assets/img/Click.png" alt="enter" />
+          </button>
+        </a>
       </div>
     </section>
     <footer class="footer">
