입장하기 버튼 변경

--- a/assets/html/Home.html
+++ b/assets/html/Home.html
@@ -34,7 +34,11 @@
     <section class="main-content">
       <div class="welcome-container">
         <img class="welcome" src="../img/welcome.jpg" alt="welcome" />
-        <button class="enter-button">입장하기</button>
+        <a href="../html/Home.html">
+          <button class="enter-button">
+            <img src="../img/Click.png" alt="enter" />
+          </button>
+        </a>
       </div>
     </section>
     <footer class="footer">
