--- a/assets/html/My Page.html
+++ b/assets/html/My Page.html
@@ -47,18 +47,32 @@
       </nav>
     </header>
     <div class="side-menu">
-      <h2>Profile</h2>
-      <ul class="menu-list">
-        <li><a href="../html/My Page.html">Profile 설정</a></li>
-        <li><a href="../html/Change Password.html">비밀번호 변경</a></li>
+      <ul class="profile">
+        <h2>Profile</h2>
+        <ul class="menu-list">
+          <li class="present"><a href="./My Page.html">Profile 설정</a></li>
+          <li>
+            <a href="./Change Password.html">비밀번호 변경</a>
+          </li>
+        </ul>
       </ul>
-      <h2>Purchase History</h2>
-      <ul class="menu-list">
-        <li><a href="../html/Purchase History.html">구매목록</a></li>
-        <li><a href="../html/Chat History.html">채팅 History</a></li>
+      <ul class="purchase-history">
+        <h2>Purchase History</h2>
+        <ul class="menu-list">
+          <li><a href="./Purchase History.html">구매목록</a></li>
+          <li><a href="./Chat.html">채팅 History</a></li>
+        </ul>
+      </ul>
+      <ul class="side-dropdown-menu">
+        <h4>Profile</h4>
+        <li class="present"><a href="./Home.html">Profile 설정</a></li>
+        <li><a href="../html/Home.html">비밀번호 변경</a></li>
+        <h4>Purchase History</h4>
+        <li><a href="../html/Search.html">구매목록</a></li>
+        <li><a href="../html/Chat.html">채팅 History</a></li>
       </ul>
     </div>
-    <div class="profile">
+    <div class="user-profile">
       <img class="profile img" src="../img/user.png" alt="profile" />
       <div class="userinfo">
         <h2 class="username">UserName</h2>
