Chat History 바로가기 링크 수정

--- a/assets/html/Purchase History.html
+++ b/assets/html/Purchase History.html
@@ -58,7 +58,7 @@
         <h2>Purchase History</h2>
         <ul class="menu-list">
           <li class="present"><a href="./Purchase History.html">구매목록</a></li>
-          <li><a href="./Chat.html">채팅 History</a></li>
+          <li><a href="./Chat History.html">채팅 History</a></li>
         </ul>
       </ul>
       <ul class="side-dropdown-menu">
@@ -67,7 +67,7 @@
         <li><a href="../html/Home.html">비밀번호 변경</a></li>
         <h4>Purchase History</h4>
         <li class="present"><a href="../html/Search.html">구매목록</a></li>
-        <li><a href="../html/Chat.html">채팅 History</a></li>
+        <li><a href="./Chat History.html">채팅 History</a></li>
       </ul>
     </div>
     <section class="purchase">
