--- a/assets/html/Create Post.html
+++ b/assets/html/Create Post.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/Create Post.css" />
     <script src="../js/Create Post.js"></script>
-    <title>Shop</title>
+    <title>Create Post</title>
   </head>
 
   <body>
