판매상태 및 넘버링 추가

--- a/assets/html/Shop.html
+++ b/assets/html/Shop.html
@@ -63,7 +63,9 @@
 
         <div class="book-list">
           <div class="book">
-            <input type="checkbox" class="checkbox" placeholder="체크박스">
+            <ul class="number_list">
+              <li class="number_item">판매중</li>
+            </ul>
             <img src="../img/book-cover.png" alt="Book Cover" /> 
             <div class="book-details">
               <p class="book-name">Django - 처음부터 배우는 Django Frame Work</p>
@@ -81,7 +83,7 @@
               <ul class="info">
                 <li class="saler">판매자 : [별명]</li>
               </ul>
-              <button class="check-item"><a href="#">상품 확인하기</a></button>
+              <button class="check-item"><a href="./Book Detail.html">상품 확인하기</a></button>
             </div>
           </div>
         </div>
