--- a/assets/html/Search.html
+++ b/assets/html/Search.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/Search.css" />
-    <title>Book Detail</title>
+    <title>Search</title>
   </head>
 
   <body>
