--- a/assets/html/signup.html
+++ b/assets/html/signup.html
@@ -12,29 +12,29 @@
     <header class="navbar">
       <nav>
         <div class="nav-container">
-          <a href="../html/Home.html">
+          <a href="./index.html">
             <img class="book" src="../img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
             <ul class="menu">
-              <li><a href="../html/Login.html">Login</a></li>
-              <li><a href="../html/Sign Up.html">Sign Up</a></li>
+              <li><a href="./login.html">Login</a></li>
+              <li><a href="../signup.html">Sign Up</a></li>
             </ul>
             <ul class="menu2">
-              <li><a href="../html/Home.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/Search.html">Search</a></li>
-              <li><a href="../html/Chat.html">Chat</a></li>
-              <li><a href="../html/About Us.html">About Us</a></li>
+              <li><a href="../home.html">Home</a></li>
+              <li><a href="../shop.html">Shop</a></li>
+              <li><a href="../search.html">Search</a></li>
+              <li><a href="./chat.html">Chat</a></li>
+              <li><a href="./aboutUs.html">About Us</a></li>
             </ul>
             <ul class="dropdown-menu">
-              <li><a href="../html/Login.html">Login</a></li>
-              <li><a href="../html/Sign Up.html">Sign Up</a></li>
-              <li><a href="../html/Home.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/Search.html">Search</a></li>
-              <li><a href="../html/Chat.html">Chat</a></li>
-              <li><a href="../html/About Us.html">About Us</a></li>
+              <li><a href="./login.html">Login</a></li>
+              <li><a href="./signup.html">Sign Up</a></li>
+              <li><a href="./home.html">Home</a></li>
+              <li><a href="./Shop.html">Shop</a></li>
+              <li><a href="./search.html">Search</a></li>
+              <li><a href="./chat.html">Chat</a></li>
+              <li><a href="./aboutUs.html">About Us</a></li>
             </ul>
           </div>
         </div>
@@ -62,7 +62,7 @@
           <button type="submit" class="join-button">가입하기</button>
         <div class="question">
           <div class="question-login">
-            <h4>이미 가입한 사용자이신가요? <a href="../html/Login.html">  로그인하기</a></h4>
+            <h4>이미 가입한 사용자이신가요? <a href="../html/login.html">  로그인하기</a></h4>
         </div>
       </div>
     </form>
@@ -70,5 +70,6 @@
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
+    <script src="../js/signup.js"></script>
   </body>
 </html>
