--- a/assets/html/aboutUs.html
+++ b/assets/html/aboutUs.html
@@ -52,7 +52,7 @@
             <a href="./aboutUs.html">JoongoBooks란?</a>
           </li>
           <li>
-            <a href="./joongoReaders.html">Joongo-readers 소개</a>
+            <a href="./joongoLeaders.html">Joongo-Leaders 소개</a>
           </li>
         </ul>
       </ul>
@@ -74,7 +74,7 @@
       <ul class="side-dropdown-menu">
         <h4>프로젝트 기획</h4>
         <li class="present"><a href="./About Us.html">JoongoBooks란?</a></li>
-        <li><a href="./joongoReaders.html">Joongo-readers 소개</a></li>
+        <li><a href="./joongoLeaders.html">Joongo-Leaders 소개</a></li>
         <a href="./f&a.html">F&A</a>
         <h4>1:1 문의하기</h4>
         <li><a href="./report.html">불량 판매자 신고</a></li>
@@ -92,7 +92,7 @@
       </p>
     </div>
     <footer class="footer">
-      <p>&copy; 2023, joongo-readers. All rights reserved.</p>
+      <p>&copy; 2023, joongo-leaders. All rights reserved.</p>
     </footer>
   </body>
 </html>
