--- a/assets/html/Login.html
+++ b/assets/html/Login.html
@@ -64,7 +64,7 @@
           
         </div>
     <footer class="footer">
-      <p>&copy; 2023, joongo-readers. All rights reserved.</p>
+      <p>&copy; 2023, joongo-leaders. All rights reserved.</p>
     </footer>
   </body>
 </html>
