--- a/assets/html/Sign Up.html
+++ b/assets/html/Sign Up.html
@@ -68,7 +68,7 @@
     </form>
       
     <footer class="footer">
-      <p>&copy; 2023, joongo-readers. All rights reserved.</p>
+      <p>&copy; 2023, joongo-leaders. All rights reserved.</p>
     </footer>
   </body>
 </html>
