--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </section>
     <footer class="footer">
-      <p>&copy; 2023, joongo-readers. All rights reserved.</p>
+      <p>&copy; 2023, joongo-leaders. All rights reserved.</p>
     </footer>
   </body>
 </html>
