--- a/assets/html/Change Password.html
+++ b/assets/html/Change Password.html
@@ -101,7 +101,7 @@
       </div>
     </form>
     <footer class="footer">
-      <p>&copy; 2023, joongo-leaders. All rights reserved.</p>
+      <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
   </body>
 </html>
