--- a/assets/html/Home.html
+++ b/assets/html/Home.html
@@ -42,7 +42,7 @@
       </div>
     </section>
     <footer class="footer">
-      <p>&copy; 2023, joongo-leaders. All rights reserved.</p>
+      <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
   </body>
 </html>
