--- a/assets/html/Search.html
+++ b/assets/html/Search.html
@@ -63,7 +63,7 @@
       </form>
     </div>
     <footer class="footer">
-      <p>&copy; 2023, joongo-leaders. All rights reserved.</p>
+      <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
   </body>
 </html>
