--- a/assets/html/joongoReaders.html
+++ b/assets/html/joongoReaders.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/joongoLeaders.css" />
-    <title>JoongoLeaders 소개</title>
+    <link rel="stylesheet" href="../css/joongoReaders.css" />
+    <title>JoongoReaders 소개</title>
   </head>
 
   <body>
@@ -52,7 +52,7 @@
             <a href="./aboutUs.html">JoongoBooks란?</a>
           </li>
           <li class="present">
-            <a href="./joongoLeaders.html">Joongo-leaders 소개</a>
+            <a href="./joongoReaders.html">Joongo-Readers 소개</a>
           </li>
         </ul>
       </ul>
@@ -74,7 +74,7 @@
       <ul class="side-dropdown-menu">
         <h4>프로젝트 기획</h4>
         <li><a href="./About Us.html">JoongoBooks란?</a></li>
-        <li class="present"><a href="./joongoLeaders.html">Joongo-leaders 소개</a></li>
+        <li class="present"><a href="./joongoReaders.html">Joongo-Readers 소개</a></li>
         <a href="./f&a.html">F&A</a>
         <h4>1:1 문의하기</h4>
         <li><a href="./report.html">불량 판매자 신고</a></li>
@@ -83,14 +83,14 @@
         </li>
       </ul>
     </div>
-    <div class="joongoleaders">
-      <h2>Joongo Leaders 소개</h2>
-      <div class="leaders">
-        <img class="leader" src="../img/user.png" alt="leader">
+    <div class="joongoreaders">
+      <h2>Joongo Readers 소개</h2>
+      <div class="readers">
+        <img class="reader" src="../img/user.png" alt="leader">
         <div class="joongo">
           <h4>1번 사람</h4>
-          <ul class="leader-info">
-            <li>joongo-leaders 조장</li>
+          <ul class="reader-info">
+            <li>joongo-readers 조장</li>
             <li>1,2,3,4번 맡아서 진행</li>
           </ul>
         </div>
