🐛 Fix : href 수정

--- a/assets/html/Login.html
+++ b/assets/html/Login.html
@@ -12,29 +12,29 @@
     <header class="navbar">
       <nav>
         <div class="nav-container">
-          <a href="../html/Home.html">
-            <img class="book" src="../img/books.png" alt="logo" />
+          <a href="/index.html">
+            <img class="book" src="../img/books.jpg" alt="logo" />
           </a>
           <div class="menu-container">
             <ul class="menu">
-              <li><a href="../html/Login.html">Login</a></li>
-              <li><a href="../html/Sign Up.html">Sign Up</a></li>
+              <li><a href="./login.html">Login</a></li>
+              <li><a href="./signup.html">Sign Up</a></li>
             </ul>
             <ul class="menu2">
-              <li><a href="../html/Home.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/Search.html">Search</a></li>
-              <li><a href="../html/Chat.html">Chat</a></li>
-              <li><a href="../html/About Us.html">About Us</a></li>
+              <li><a href="./home.html">Home</a></li>
+              <li><a href="./shop.html">Shop</a></li>
+              <li><a href="./search.html">Search</a></li>
+              <li><a href="./chat.html">Chat</a></li>
+              <li><a href="./aboutUs.html">About Us</a></li>
             </ul>
             <ul class="dropdown-menu">
-              <li><a href="../html/Login.html">Login</a></li>
-              <li><a href="../html/Sign Up.html">Sign Up</a></li>
-              <li><a href="../html/Home.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/Search.html">Search</a></li>
-              <li><a href="../html/Chat.html">Chat</a></li>
-              <li><a href="../html/About Us.html">About Us</a></li>
+              <li><a href="./login.html">Login</a></li>
+              <li><a href="./signup.html">Sign Up</a></li>
+              <li><a href="./home.html">Home</a></li>
+              <li><a href="./Shop.html">Shop</a></li>
+              <li><a href="./search.html">Search</a></li>
+              <li><a href="./chat.html">Chat</a></li>
+              <li><a href="./aboutUs.html">About Us</a></li>
             </ul>
           </div>
         </div>
@@ -46,19 +46,19 @@
         <div class="form-group">
           <ul>
             <li>ID</li>
-            <li><input type="text" id="ID" name="ID" placeholder="  아이디" required></li>
+            <li><input type="text" id="id" name="id" placeholder="  아이디" required></li>
           </ul>
           <ul>
             <li>Password</li>
             <li><input type="password" id="password" name="password" placeholder="  비밀번호" required></li>
           </ul>
-          <button type="submit">Login</button>
+          <button type="submit" class="btn-login">Login</button>
           <div class="question">
             <div class="question-sign">
-              <h4>아직 회원가입 전이신가요? <a href="../html/Sign Up.html">  회원가입하기</a></h4>
+              <h4>아직 회원가입 전이신가요? <a href="./signup.html">  회원가입하기</a></h4>
             </div>
             <div class="question-pw"></div>
-              <h4>비밀번호를 잊어버리셨나요? <a href="../html/Password.html">  비밀번호찾기</a></h4>
+              <h4>비밀번호를 잊어버리셨나요? <a href="./passwordSearch.html">  비밀번호찾기</a></h4>
             </div>
         </div>
           
