--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
     <header class="navbar">
       <nav>
         <div class="nav-container">
-          <a href="./assets/html/Home.html">
+          <a href="./index.html">
             <img class="book" src="./assets/img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
             <ul class="menu">
-              <li><a href="./assets/html/Login.html">Login</a></li>
-              <li><a href="./assets/html/Sign Up.html">Sign Up</a></li>
+              <li><a href="./assets/html/login.html">Login</a></li>
+              <li><a href="./assets/html/signup.html">Sign Up</a></li>
             </ul>
             <ul class="menu2">
-              <li><a href="./assets/html/Home.html">Home</a></li>
-              <li><a href="./assets/html/Shop.html">Shop</a></li>
-              <li><a href="./assets/html/Search.html">Search</a></li>
-              <li><a href="./assets/html/Chat.html">Chat</a></li>
-              <li><a href="./assets/html/About Us.html">About Us</a></li>
+              <li><a href="./assets/html/home.html">Home</a></li>
+              <li><a href="./assets/html/shop.html">Shop</a></li>
+              <li><a href="./assets/html/search.html">Search</a></li>
+              <li><a href="./assets/html/chat.html">Chat</a></li>
+              <li><a href="./assets/html/aboutUs.html">About Us</a></li>
             </ul>
             <ul class="dropdown-menu">
-              <li><a href="./assets/html/Login.html">Login</a></li>
-              <li><a href="./assets/html/Sign Up.html">Sign Up</a></li>
-              <li><a href="./assets/html/Home.html">Home</a></li>
+              <li><a href="./assets/html/login.html">Login</a></li>
+              <li><a href="./assets/html/signup.html">Sign Up</a></li>
+              <li><a href="./assets/html/home.html">Home</a></li>
               <li><a href="./assets/html/Shop.html">Shop</a></li>
-              <li><a href="./assets/html/Search.html">Search</a></li>
-              <li><a href="./assets/html/Chat.html">Chat</a></li>
-              <li><a href="./assets/html/About Us.html">About Us</a></li>
+              <li><a href="./assets/html/search.html">Search</a></li>
+              <li><a href="./assets/html/chat.html">Chat</a></li>
+              <li><a href="./assets/html/aboutUs.html">About Us</a></li>
             </ul>
           </div>
         </div>
@@ -43,10 +43,8 @@
     <section class="main-content">
       <div class="welcome-container">
         <img class="welcome" src="./assets/img/welcome.jpg" alt="welcome" />
-        <a href="./assets/html/Home.html">
-          <button class="enter-button">
+        <a class="enter-button" href="./assets/html/Home.html">
             <img src="./assets/img/Click.png" alt="enter" />
-          </button>
         </a>
       </div>
     </section>
