--- a/assets/html/Home.html
+++ b/assets/html/Home.html
@@ -12,20 +12,29 @@
     <header class="navbar">
       <nav>
         <div class="nav-container">
-          <a href="../html/Home.html">
+          <a href="./index.html">
             <img class="book" src="../img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
             <ul class="menu">
-              <li><a href="../html/Login.html">Login</a></li>
-              <li><a href="../html/Sign Up.html">Sign Up</a></li>
+              <li><a href="./login.html">Login</a></li>
+              <li><a href="../signup.html">Sign Up</a></li>
             </ul>
             <ul class="menu2">
-              <li><a href="../html/Home.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/Search.html">Search</a></li>
-              <li><a href="../html/Chat.html">Chat</a></li>
-              <li><a href="../html/About Us.html">About Us</a></li>
+              <li><a href="../home.html">Home</a></li>
+              <li><a href="../shop.html">Shop</a></li>
+              <li><a href="../search.html">Search</a></li>
+              <li><a href="./chat.html">Chat</a></li>
+              <li><a href="./aboutUs.html">About Us</a></li>
+            </ul>
+            <ul class="dropdown-menu">
+              <li><a href="./login.html">Login</a></li>
+              <li><a href="./signup.html">Sign Up</a></li>
+              <li><a href="./home.html">Home</a></li>
+              <li><a href="./Shop.html">Shop</a></li>
+              <li><a href="./search.html">Search</a></li>
+              <li><a href="./chat.html">Chat</a></li>
+              <li><a href="./aboutUs.html">About Us</a></li>
             </ul>
           </div>
         </div>
@@ -34,7 +43,7 @@
     <section class="main-content">
       <div class="welcome-container">
         <img class="welcome" src="../img/welcome.jpg" alt="welcome" />
-        <a href="../html/Home.html">
+        <a href="/index.html">
           <button class="enter-button">
             <img src="../img/Click.png" alt="enter" />
           </button>
