--- a/assets/html/joongoReaders.html
+++ b/assets/html/joongoReaders.html
@@ -57,7 +57,7 @@
         </ul>
       </ul>
       <ul class="questions">
-        <a class="questions" href="./f&a.html">F&A</a>
+        <a class="questions" href="./fna.html">F&A</a>
       </ul>
       <ul class="ask">
         <h2>1:1 문의하기</h2>
@@ -75,7 +75,7 @@
         <h4>프로젝트 기획</h4>
         <li><a href="./About Us.html">JoongoBooks란?</a></li>
         <li class="present"><a href="./joongoReaders.html">Joongo-Readers 소개</a></li>
-        <a href="./f&a.html">F&A</a>
+        <a href="./fna.html">F&A</a>
         <h4>1:1 문의하기</h4>
         <li><a href="./report.html">불량 판매자 신고</a></li>
         <li>
