초기화, 신고하기 버튼 추가

--- a/assets/html/report.html
+++ b/assets/html/report.html
@@ -105,6 +105,8 @@
           </tr>
         </tbody>
       </table>
+      <button class="resetButton" id="resetButton">초기화</button>
+      <button class="submitButton" id="submitButton">신고하기</button>
     </section>
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
