♻️ Refactor : Authorized menu 및 js 추가

--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
             <img class="book" src="./assets/img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
+            <!-- login 관련 메뉴 -->
             <ul class="menu">
               <li><a href="./assets/html/login.html">Login</a></li>
               <li><a href="./assets/html/signup.html">Sign Up</a></li>
             </ul>
+            <ul class="menu before">
+            </ul>
+            <!-- // login 관련 메뉴 -->
             <ul class="menu2">
               <li><a href="./assets/html/home.html">Home</a></li>
               <li><a href="./assets/html/shop.html">Shop</a></li>
@@ -43,7 +47,7 @@
     <section class="main-content">
       <div class="welcome-container">
         <img class="welcome" src="./assets/img/welcome.jpg" alt="welcome" />
-        <a class="enter-button" href="./assets/html/Home.html">
+        <a class="enter-button">
             <img src="./assets/img/Click.png" alt="enter" />
         </a>
       </div>
@@ -51,5 +55,6 @@
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
