🎨 Style : href 주소 변경

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
             <!-- // login 관련 메뉴 -->
             <ul class="menu2">
-              <li><a href="./assets/html/home.html">Home</a></li>
+              <li><a href="./index.html">Home</a></li>
               <li><a href="./assets/html/shop.html">Shop</a></li>
               <li><a href="./assets/html/search.html">Search</a></li>
               <li><a href="./assets/html/chat.html">Chat</a></li>
@@ -34,7 +34,7 @@
             <ul class="dropdown-menu">
               <li><a href="./assets/html/login.html">Login</a></li>
               <li><a href="./assets/html/signup.html">Sign Up</a></li>
-              <li><a href="./assets/html/home.html">Home</a></li>
+              <li><a href="./index.html">Home</a></li>
               <li><a href="./assets/html/Shop.html">Shop</a></li>
               <li><a href="./assets/html/search.html">Search</a></li>
               <li><a href="./assets/html/chat.html">Chat</a></li>
