♻️ Refactor : FE-BE 연동을 위한 코드 리팩토링

--- a/assets/html/Shop.html
+++ b/assets/html/Shop.html
@@ -68,32 +68,11 @@
                 <a class="arrow nnext" href="#"></a>
               </div>
             </div>
-            <button class="update-item"><a href="#">상품 등록하기</a></button>
+            <button class="update-item"><a href="./createPost.html">상품 등록하기</a></button>
           </div>
 
         <div class="book-list">
-          <div class="book">
-            <input type="checkbox" class="checkbox">
-            <img src="../img/book-cover.png" alt="Book Cover" /> 
-            <div class="book-details">
-              <p class="book-name">Django - 처음부터 배우는 Django Frame Work</p>
-              <ul class="book-info">
-                <li class="book2">홍길동 저</li>
-                <li class="book2">오르미 북스</li>
-                <li>EST Soft</li>
-              </ul>
-              <ul class="book-status">
-                <li class="book3">상태 : 최상</li>
-                <li class="book3">원가 : 29000원</li>
-                <li>판매가 : 15000원</li>
-              </ul>
-            </div>
-              <ul class="info">
-                <li class="saler">판매자 : [별명]</li>
-              </ul>
-              <button class="check-item"><a href="#">상품 확인하기</a></button>
-            </div>
-          </div>
+          
         </div>
       </div>
     </section>
