--- a/index.html
+++ b/index.html
@@ -12,18 +12,22 @@
     <header class="navbar">
       <nav>
         <div class="nav-container">
+
+          <!-- LOGO -->
           <a href="./index.html">
-            <img class="book" src="./assets/img/books.png" alt="logo" />
+            <img class="logo" src="./assets/img/books.png" alt="logo" />
           </a>
+          
           <div class="menu-container">
-            <!-- login 관련 메뉴 -->
+            <!-- login -->
             <ul class="menu">
               <li><a href="./assets/html/login.html">Login</a></li>
               <li><a href="./assets/html/signup.html">Sign Up</a></li>
             </ul>
             <ul class="menu before">
             </ul>
-            <!-- // login 관련 메뉴 -->
+
+            <!-- Menu -->
             <ul class="menu2">
               <li><a href="./index.html">Home</a></li>
               <li><a href="./assets/html/shop.html">Shop</a></li>
@@ -31,6 +35,8 @@
               <li><a href="./assets/html/chat.html">Chat</a></li>
               <li><a href="./assets/html/aboutUs.html">About Us</a></li>
             </ul>
+
+            <!-- dropdown-menu -->
             <ul class="dropdown-menu">
               <li><a href="./assets/html/login.html">Login</a></li>
               <li><a href="./assets/html/signup.html">Sign Up</a></li>
