--- a/assets/html/Login.html
+++ b/assets/html/Login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/login.css" />
     <title>로그인 화면</title>
   </head>
@@ -13,28 +14,28 @@
       <nav>
         <div class="nav-container">
           <a href="/index.html">
-            <img class="book" src="../img/books.jpg" alt="logo" />
+            <img class="logo" src="../img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
             <ul class="menu">
-              <li><a href="./login.html">Login</a></li>
-              <li><a href="./signup.html">Sign Up</a></li>
+              <li><a href="../html/login.html">Login</a></li>
+              <li><a href="../html/signup.html">Sign Up</a></li>
             </ul>
             <ul class="menu2">
-              <li><a href="./home.html">Home</a></li>
-              <li><a href="./shop.html">Shop</a></li>
-              <li><a href="./search.html">Search</a></li>
-              <li><a href="./chat.html">Chat</a></li>
-              <li><a href="./aboutUs.html">About Us</a></li>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="../html/shop.html">Shop</a></li>
+              <li><a href="../html/search.html">Search</a></li>
+              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
             <ul class="dropdown-menu">
-              <li><a href="./login.html">Login</a></li>
-              <li><a href="./signup.html">Sign Up</a></li>
-              <li><a href="./home.html">Home</a></li>
-              <li><a href="./Shop.html">Shop</a></li>
-              <li><a href="./search.html">Search</a></li>
-              <li><a href="./chat.html">Chat</a></li>
-              <li><a href="./aboutUs.html">About Us</a></li>
+              <li><a href="../html/login.html">Login</a></li>
+              <li><a href="../html/signup.html">Sign Up</a></li>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="../html/Shop.html">Shop</a></li>
+              <li><a href="../html/search.html">Search</a></li>
+              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
           </div>
         </div>
@@ -55,10 +56,10 @@
           <button type="submit" class="btn-login">Login</button>
           <div class="question">
             <div class="question-sign">
-              <h4>아직 회원가입 전이신가요? <a href="./signup.html">  회원가입하기</a></h4>
+              <h4>아직 회원가입 전이신가요? <a href="../html/signup.html">  회원가입하기</a></h4>
             </div>
             <div class="question-pw"></div>
-              <h4>비밀번호를 잊어버리셨나요? <a href="./passwordSearch.html">  비밀번호찾기</a></h4>
+              <h4>비밀번호를 잊어버리셨나요? <a href="../html/passwordSearch.html">  비밀번호찾기</a></h4>
             </div>
         </div>
           
