--- a/assets/html/signup.html
+++ b/assets/html/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/signup.css" />
     <title>회원가입 화면</title>
   </head>
@@ -12,29 +13,29 @@
     <header class="navbar">
       <nav>
         <div class="nav-container">
-          <a href="./index.html">
-            <img class="book" src="../img/books.png" alt="logo" />
+          <a href="/index.html">
+            <img class="logo" src="../img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
             <ul class="menu">
-              <li><a href="./login.html">Login</a></li>
-              <li><a href="../signup.html">Sign Up</a></li>
+              <li><a href="../html/login.html">Login</a></li>
+              <li><a href="../html/signup.html">Sign Up</a></li>
             </ul>
             <ul class="menu2">
-              <li><a href="../home.html">Home</a></li>
-              <li><a href="../shop.html">Shop</a></li>
-              <li><a href="../search.html">Search</a></li>
-              <li><a href="./chat.html">Chat</a></li>
-              <li><a href="./aboutUs.html">About Us</a></li>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="../html/shop.html">Shop</a></li>
+              <li><a href="../html/search.html">Search</a></li>
+              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
             <ul class="dropdown-menu">
-              <li><a href="./login.html">Login</a></li>
-              <li><a href="./signup.html">Sign Up</a></li>
-              <li><a href="./home.html">Home</a></li>
-              <li><a href="./Shop.html">Shop</a></li>
-              <li><a href="./search.html">Search</a></li>
-              <li><a href="./chat.html">Chat</a></li>
-              <li><a href="./aboutUs.html">About Us</a></li>
+              <li><a href="../html/login.html">Login</a></li>
+              <li><a href="../html/signup.html">Sign Up</a></li>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="../html/Shop.html">Shop</a></li>
+              <li><a href="../html/search.html">Search</a></li>
+              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
           </div>
         </div>
